--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,32 @@
+Babel==2.7.0
+bcrypt==3.1.7
+blinker==1.4
+cffi==1.13.2
 Click==7.0
+dotmap==1.3.8
 Flask==1.1.1
+Flask-BabelEx==0.9.3
+flask-buzz==0.1.14
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
+Flask-Principal==0.4.0
+Flask-Security==3.0.0
+Flask-SQLAlchemy==2.4.1
+Flask-WTF==0.14.2
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
+mysqlclient==1.3.13
+passlib==1.7.2
+pendulum==2.0.5
+py-buzz==0.3.7
+pycparser==2.19
+PyJWT==1.7.1
+python-dateutil==2.8.1
+pytz==2019.3
+pytzdata==2019.3
+six==1.13.0
+speaklater==1.3
+SQLAlchemy==1.3.12
 Werkzeug==0.16.0
+WTForms==2.2.1
