--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,30 @@
-Babel==2.7.0
+Babel==2.10.1
 bcrypt==3.2.2
 blinker==1.4
 cffi==1.15.0
-Click==7.0
-Flask==1.1.1
-Flask-BabelEx==0.9.3
-Flask-Login==0.4.1
+click==8.1.3
+colorama==0.4.4
+dnspython==2.2.1
+email-validator==1.2.1
+Flask==2.1.2
+Flask-BabelEx==0.9.4
+Flask-Login==0.6.1
 Flask-Mail==0.9.1
 Flask-Principal==0.4.0
 Flask-Security==3.0.0
-Flask-WTF==0.14.2
-itsdangerous==1.1.0
-Jinja2==2.10.3
-MarkupSafe==1.1.1
+Flask-WTF==1.0.1
+greenlet==1.1.2
+idna==3.3
+importlib-metadata==4.11.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
 mysqlclient==2.1.0
-passlib==1.7.2
-pycparser==2.19
-pytz==2019.3
-six==1.13.0
+passlib==1.7.4
+pycparser==2.21
+pytz==2022.1
 speaklater==1.3
-SQLAlchemy==1.3.12
-Werkzeug==0.16.0
-WTForms==2.2.1
+SQLAlchemy==1.4.37
+Werkzeug==2.1.2
+WTForms==3.0.1
+zipp==3.8.0
